--- a/20210727/index.html
+++ b/20210727/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<style>
+h3{text-align:center}
+span{color:red}
+</style>
 </head>
 <body>
-    안녕하세요 오늘은 27일 화요일 입니다
+<h3>사랑</h3>
+<hr>
+<div style="background-color:skyblue;padding:20px;">내가사람의방언과 천사의 말을 할지라도
+<span style="color:red">사랑</span>이 없으면 소리나는 구리와 울리는 꽹과리<span style="color:red">사랑</span>이 없으면 아무것도 아니라</div>
+<p>우리서로 사랑하며 살아요~</p>&copy
+<h1>hello</h1>
+<h2>my name is</h2>
+<h3>my hobby is</h3>
+<h4>my favorite color is</h4>
+<h1>Lorem ipsum dolor sit <span>amet</span> consectetur, 
+    <p>adipisicing elit.</p> Ex iure atque cum <br> omnis voluptas aliquam hr quasi magni repellat quaerat, commodi accusantium dolorum impedit quas, repellendus facere nesciunt ab libero quam?</h1>
 </body>
 </html>
