--- a/20210727/index.html
+++ b/20210727/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 <style>
-h3{text-align:center}
-span{color:red}
+
 </style>
 </head>
 <body>
@@ -17,10 +16,11 @@ span{color:red}
 <span style="color:red">사랑</span>이 없으면 소리나는 구리와 울리는 꽹과리<span style="color:red">사랑</span>이 없으면 아무것도 아니라</div>
 <p>우리서로 사랑하며 살아요~</p>&copy
 <h1>hello</h1>
-<h2>my name is</h2>
+<!-- <h2>my name is</h2> -->
 <h3>my hobby is</h3>
 <h4>my favorite color is</h4>
 <h1>Lorem ipsum dolor sit <span>amet</span> consectetur, 
     <p>adipisicing elit.</p> Ex iure atque cum <br> omnis voluptas aliquam hr quasi magni repellat quaerat, commodi accusantium dolorum impedit quas, repellendus facere nesciunt ab libero quam?</h1>
+<div style=background-color:skyblue;padding: 30px">Lorem ipsum <span style="color:red"; font-weight:bold">dolor</span> sit amet consectetur adipisicing elit. Ea, quibusdam.</div>
 </body>
 </html>
