--- a/20210727/index.html
+++ b/20210727/index.html
@@ -22,5 +22,42 @@
 <h1>Lorem ipsum dolor sit <span>amet</span> consectetur, 
     <p>adipisicing elit.</p> Ex iure atque cum <br> omnis voluptas aliquam hr quasi magni repellat quaerat, commodi accusantium dolorum impedit quas, repellendus facere nesciunt ab libero quam?</h1>
 <div style=background-color:skyblue;padding: 30px">Lorem ipsum <span style="color:red"; font-weight:bold">dolor</span> sit amet consectetur adipisicing elit. Ea, quibusdam.</div>
+img [src="content_icon0$.png"]*3
+<img src="images/content_icon01.png" alt="img1">
+<img src="images/content_icon02.png" alt="img2">
+<img src="images/content_icon03.png" alt="img3">
+<ul>
+<li>Lorem, ipsum.</li>
+<li>Lorem, ipsum.</li>
+<li>Lorem, ipsum.</li>
+<li>Lorem, ipsum.</li>
+<li>Lorem, ipsum.</li>
+</ul>
+<ol>
+    <li>Lorem, ipsum.</li>
+    <li>Lorem, ipsum.</li>
+    <li>Lorem, ipsum.</li>
+</ol>   
+<ol>
+    <li>Lorem, ipsum dolor.</li>
+    <li>Perspiciatis, corrupti nihil!</li>
+    <li>Asperiores, veniam! Totam.</li>
+</ol>
+<h1>test</h1>
+<h2>test</h2>
+<h3>test</h3>
+<ol type="A" start="3">
+    <li>menu1</li>
+    <li>menu2</li>
+    <li>menu3</li>
+</ol>
+<ol>
+    <li>Lorem, ipsum dolor.</li>
+    <li>Maxime, ratione iste.</li>
+    <li>Dolorum, dignissimos culpa!</li>
+</ol>
+
+
+
 </body>
 </html>
