--- a/20210727/index.html
+++ b/20210727/index.html
@@ -43,9 +43,6 @@ img [src="content_icon0$.png"]*3
     <li>Perspiciatis, corrupti nihil!</li>
     <li>Asperiores, veniam! Totam.</li>
 </ol>
-<h1>test</h1>
-<h2>test</h2>
-<h3>test</h3>
 <ol type="A" start="3">
     <li>menu1</li>
     <li>menu2</li>
@@ -56,6 +53,22 @@ img [src="content_icon0$.png"]*3
     <li>Maxime, ratione iste.</li>
     <li>Dolorum, dignissimos culpa!</li>
 </ol>
+<a href="http://www.naver.com">naver</a>
+<a href="http://www.korea.com">korea</a>
+<a href="http://www.naver.com">naver</a>
+<ul>
+    <li><a href="#">menu1</a></li>
+    <li><a href="#">menu2</a></li>
+    <li><a href="#">menu3</a></li>
+    <li><a href="#">menu4</a></li>
+    <li><a href="#">menu5</a></li>
+    <li><a href="#">menu6</a></li>
+    <li><a href="#">menu7</a></li>
+    <li><a href="#">menu8</a></li>
+    <li><a href="#">menu9</a></li>
+    <li><a href="#">menu10</a></li>
+</ul>
+
 
 
 
