--- a/20210730_float/float.html
+++ b/20210730_float/float.html
@@ -29,14 +29,15 @@
             float:left;
             width: 200px;text-align: center;
             height: 40px;
-            line-height: 40px}
+            line-height: 40px;
+        background-color:skyblue ;}
+            
 
 
         div.nav>ul>li:hover{background:orange;}
 
         div.nav{
             width: 1000px;
-            background:skyblue;
             margin: 0 auto}
         div.nav h1{text-align: center;}
 
@@ -53,7 +54,7 @@
     
     <div class="nav">
         <h1>logo</h1>
-        <ul class="clearfix"
+        <ul class="clearfix">
             <li>menu1</li>
             <li>menu2</li>
             <li>menu3</li>
