--- a/20210728/index.html
+++ b/20210728/index.html
@@ -6,20 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body{background-color: aqua;}
+        /* body{background-color: aqua;}
         h3{color:purple}
         hr{border: 5px solid white}
-        span{color: red}
-        @import url("style.css");
+        span{color: red} */
+       /* @import "style.css"
+        @import url("style.css"); */
+        h3,li{color: brown;}
+        .title{color: skyblue;}
+        .warning{background-color: red;color: white;}
+        
+        
         </style>
         <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
 <a href="http://www.naver.com" target="_blank">
-    <img src="../images/testing01.jpg" alt="test">
+    <img src="../images/testimg.jpg" alt="test">
 </a>
 <h3 style="color: red">Lorem ipsum dolor</h3>
 <hr>
 <p>Lorem ipsum dolor sit amet, consectetur <span>adipisicing</span> elit. <span>Nostrum</span> , ratione.</p>
+<div style="color: red;">
+    test입니다.
+<p>text</p>
+</div>
+
+<h3 class="title">title</h3>
+<div>Lorem ipsum <strong>dolor</strong> sit amet consectetur adipisicing.</div>
+
+<ul>
+    <li>lorem.</li>
+    <li><strong>veniam</strong></li>
+    <li class="warning">eveniet</li>
+</ul>
+
+<div class="title">Lorem, ipsum dolor.</div>
 </body>
 </html>
