--- a/20210730_float/float.html
+++ b/20210730_float/float.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,10 +50,13 @@
         <div class="box1">left</div>  
         <div class="box2">right</div> 
    </div>
+   <!-- div>lorem5 -->
+   <div>Lorem ipsum dolor sit amet.</div>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, commodi?
     
     <div class="nav">
         <h1>logo</h1>
+        <!-- <ul>li*5>{menu$} -->
         <ul class="clearfix">
             <li>menu1</li>
             <li>menu2</li>
