--- a/20210727/index.html
+++ b/20210727/index.html
@@ -6,54 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 <style>
+  /* div{background-color:skyblue;padding:50px} */
+  /* li{font-weight: bold;} 연습 */
 
 </style>
+
 </head>
+
 <body>
 <h3>사랑</h3>
 <hr>
 <div style="background-color:skyblue;padding:20px;">내가사람의방언과 천사의 말을 할지라도
 <span style="color:red">사랑</span>이 없으면 소리나는 구리와 울리는 꽹과리<span style="color:red">사랑</span>이 없으면 아무것도 아니라</div>
-<p>우리서로 사랑하며 살아요~</p>&copy
-<h1>hello</h1>
-<!-- <h2>my name is</h2> -->
-<h3>my hobby is</h3>
-<h4>my favorite color is</h4>
-<h1>Lorem ipsum dolor sit <span>amet</span> consectetur, 
-    <p>adipisicing elit.</p> Ex iure atque cum <br> omnis voluptas aliquam hr quasi magni repellat quaerat, commodi accusantium dolorum impedit quas, repellendus facere nesciunt ab libero quam?</h1>
-<div style=background-color:skyblue;padding: 30px">Lorem ipsum <span style="color:red"; font-weight:bold">dolor</span> sit amet consectetur adipisicing elit. Ea, quibusdam.</div>
-img [src="content_icon0$.png"]*3
+<p>우리서로 사랑하며 살아요~</p>
+
+&copy
+
+    <div style=background-color:skyblue;
+    padding: 30px>Lorem ipsum <span style="color:red"; 
+    font-weight:bold>dolor</span> sit amet consectetur adipisicing </div>
+
+    img [src="content_icon0$.png"]*3
+<br><br>
+
 <img src="images/content_icon01.png" alt="img1">
 <img src="images/content_icon02.png" alt="img2">
 <img src="images/content_icon03.png" alt="img3">
+
 <ul>
 <li>Lorem, ipsum.</li>
 <li>Lorem, ipsum.</li>
 <li>Lorem, ipsum.</li>
 </ul>
-<ol>
+
+<ol type="i" start="3">
     <li>Lorem, ipsum.</li>
     <li>Lorem, ipsum.</li>
     <li>Lorem, ipsum.</li>
 </ol>   
+
 <ol>
     <li>Lorem, ipsum dolor.</li>
     <li>Perspiciatis, corrupti nihil!</li>
     <li>Asperiores, veniam! Totam.</li>
 </ol>
+
 <ol type="A" start="3">
     <li>menu1</li>
     <li>menu2</li>
     <li>menu3</li>
 </ol>
-<ol>
-    <li>Lorem, ipsum dolor.</li>
-    <li>Maxime, ratione iste.</li>
-    <li>Dolorum, dignissimos culpa!</li>
-</ol>
+
+<!-- ul>li*3[src="images/content_icon0$.png" alt=""] -->
+<ul>
+    <li src="images/content_icon01.png" alt=""></li>
+    <li src="images/content_icon02.png" alt=""></li>
+    <li src="images/content_icon03.png" alt=""></li>
+</ul>
+
+
+
 <a href="http://www.naver.com">naver</a>
 <a href="http://www.korea.com">korea</a>
-<a href="http://www.naver.com">naver</a>
+
+
 <ul>
     <li><a href="#">menu1</a></li>
     <li><a href="#">menu2</a></li>
@@ -62,6 +78,15 @@ img [src="content_icon0$.png"]*3
     <li><a href="#">menu5</a></li>
 </ul>
 
+<div>
+    <p>test</p>
+    <img src="" alt="">
+    <style>
+        /* div{background-color:skyblue;padding:50px} */
+        </style>
+        
 
+
+</div>
 </body>
 </html>
