--- a/20210730_float/index.html
+++ b/20210730_float/index.html
@@ -28,20 +28,17 @@
 
     .clear{clear:both}
     
-    div.box1{width: 300px;height: 300px;background:green}
-    div.box1::before{
+    div.box1{width:300px;height:300px;background:green}
+    div.box1:before{
         content: "한성용님, "; display: block;
     }
-    div.box1::after{
+    div.box1:after{
         content: "반갑습니다.";display: block;
     }
-    div.box::after{
-        content: "";clear: both; display: block;
+    /* div.box:after{content: "";clear: both; display: block; */
     }
-    clearfix::after{
-        content: "";clear: both; display: block;
-
-    }
+    .clearfix:after{ content: "";clear: both; display: block;}
+    
  </style>
 
 
@@ -55,7 +52,7 @@
     <div class="clear"></div> 
 
   </div>
-Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, voluptates?
+Lorem ipsum, dolor sit amet consectetur 
 
 <hr>
 <div class="box1">안녕하세요.</div>
