--- a/20210802_float/float_menu.html
+++ b/20210802_float/float_menu.html
@@ -14,18 +14,21 @@ li{list-style: none;}
 a:link, a:visited{text-decoration: none; color: black;}
 
 div.nav{width: 1000px;background-color: skyblue;
-margin: 0; auto;
-}
+       margin: 0; auto;
+       }
 
-/* div.nav>ul:after{content: "";clear:both;display:block} */
-
-/* div.nav>ul>li:hover{background-color: blue;;} */
-/* color: white왜 여기서 적용안되지? */
+/* div.nav>ul:after{content:"";clear:both;display:block} */
+/* div.nav>ul>li:hover{background-color: blue;} */
+/* color: white왜 여기서 적용안되지? 위에a링크 컬러 블랙이라*/
 
 div.nav>ul>li{
-    float:left; width: 166.666px;}
+    float:left; width: 166.666px;
 
-/* div.nav>ul>li:nth-child(2n){background-color: orange;} */
+    33.33
+    
+}
+
+/* div.nav>ul>li:nth-child(2n){background-color: orange;} 영역을볼수있다*/
 
 div.nav>ul>li>a{display: block;text-align: center;line-height: 40px;}
 div.nav>ul>li>a:hover{color: white;background-color: blue;}
@@ -41,7 +44,7 @@ hover 마우스 오버시 텍스트 배경 색변화  a태그 2개외우기 */
     <!-- .nav>ul>li*6>a[href="#"]>{menu$} -->
     <div class="nav">
             <ul class="clearfix">
-                <li><a href="http://#">menu1</a></li>
+                <li><a href="#">menu1</a></li>
                 <li><a href="#">menu2</a></li>
                 <li><a href="#">menu3</a></li>
                 <li><a href="#">menu4</a></li>
