--- a/20210803_position/position1.html
+++ b/20210803_position/position1.html
@@ -9,7 +9,7 @@
 <style>
     div.box{width: 400px;height: 600px;
         background-color: skyblue;
-        margin: 0;auto;
+        margin: 0 auto;
     position: relative;}
 
     div.box>div{width: 100px;height: 100px;
@@ -29,7 +29,7 @@
     div.tbox{
         width: 1000px;height: 200px;
         background-color: gray;
-        margin: 0 auto;margin-top: 20px;position: relative;text-align: center;
+        margin: 0 auto; margin-top: 200px;position: relative;text-align: center;
     }
         
     div.tbox>div{position: absolute;line-height: 100px;}
@@ -44,7 +44,7 @@
         
     }
 
-    header#header{width: 1000px;height: 100px;background-color: #skyblue;
+    header#header{width: 1000px;height: 100px;background-color: skyblue;
                     margin: 0 auto;margin-top:20px; 
                     position: relative;}
 
@@ -92,7 +92,7 @@
 
         </div>
         <nav class="gnb">
-            <!-- ul>li*5>a[href="#"]>{menu$} -->
+            <!-- ul>li*4>a[href="#"]>{menu$} -->
             <ul class="clearfix">
                 <li><a href="#">menu1</a></li>
                 <li><a href="#">menu2</a></li>
