--- a/20210804_layout/index.html
+++ b/20210804_layout/index.html
@@ -102,7 +102,7 @@
 
 /* footer */
         footer#footerWrap>div.footer{
-            width: 1000px;margin: 0 auto;
+            width: 1000px;margin: 0 auto; background-color: skyblue;
         }
         div.footer>h2{width: 200px;height: 200px;float: left;}
         div.footer>address{
