--- a/20210804_layout/index.html
+++ b/20210804_layout/index.html
@@ -28,7 +28,7 @@
                        
                         }
         header#header>h1>a{
-                        display: blockt;
+                        display: block;
                         text-align: center;
                         line-height: 100px;
                         }
