--- a/20210811_hover/hover.html
+++ b/20210811_hover/hover.html
@@ -24,11 +24,9 @@
         width: 100%;height: 100%; background:rgba(255, 0, 0, 0.3);
         display: flex;justify-content: center;align-items: center;
         position: absolute;top: 100%;left: 0; 
-        transition:0.3s;
-    }
+        transition:0.3s;}
     .container li:hover .overlay{
-        top: 0;left: 0;
-    }
+        top: 0;left: 0;  }
 
 .bg1{background-color: skyblue;}
 .bg2{background: url(../images/pc01.jpg) no-repeat center;
@@ -41,12 +39,8 @@
 .line:after{
     content: "";display: block;width: 100px;height: 2px;
     background: #000;margin: 8px auto;}
-.shadow{
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
-    }
-.tshadow{
-    text-shadow: 0 0 10px  rgba(255, 255, 255, 1);
-    }
+.shadow{box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);}
+.tshadow{text-shadow: 0 0 10px  rgba(255, 255, 255, 1);}
 
 </style>
 
