--- a/bxslider/index_slider_NM test.html
+++ b/bxslider/index_slider_NM test.html
@@ -129,7 +129,7 @@
         .snsmenu li{float: left; background: navy;}
 
 
- 
+
     </style>
 </head>
 <body>
@@ -293,4 +293,8 @@
 <!-- 슬라이더 이미지커버
 슬라이더 페이저 숫자표시 위치
 재단소식 박스 현재3개 1개는 디플넌 3.5넣기 각메뉴탭이랑 연결 
-푸터 풋메뉴 first chile 왼쪽패딩 0값 소셜메뉴 패딩에도 적용  -->
+푸터 풋메뉴 first child 왼쪽패딩 0값 소셜메뉴 패딩에도 적용  -->
+ <!-- b h1{bottom: ;} border background
+bd h1{border: 1px solid #000;}
+bdr h1{border-right: 1px solid #000;}
+borr h1{border-radius: ;} -->
