--- a/20210817_form/index.html
+++ b/20210817_form/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <form action="welcome.phb" method="GET">
+    <form action="welcome.php" method="GET">
         
         <fieldset>
             <legend>아이디/비밀번호</legend>
