--- a/20210817_form/index.html
+++ b/20210817_form/index.html
@@ -56,7 +56,9 @@
     
 </body>
 </html>
-<!-- form 입력양식영역 method전송방식 action 입력값 전송
+<!-- 
+ <form action="welcome.php" method="GET"> </form> 
+             form 입력양식영역 method전송방식 action입력값 전송
 <fieldset></fieldset>입력요소 그룹화
 <legend></legend> 그룹제목
 <input type="text">입력요소
