--- a/20210816_sprite/index.html
+++ b/20210816_sprite/index.html
@@ -44,5 +44,18 @@
     </ul>
 </div>
 
+
+<!-- <img src="../images/sprites.png" alt="">
+<style>
+    .box{
+        background-image: url(../images/sprites.png);height: 100px;
+        background-position: -140px 0;
+        background-repeat: no-repeat;
+        display: none;}
+</style>
+<div class="box"></div> -->
+
+
+
 </body>
 </html>
