--- a/bxslider/index_slider_NM test.html
+++ b/bxslider/index_slider_NM test.html
@@ -32,7 +32,7 @@
     <style>
        
         .top{width: 1200px;margin: 10px auto;padding: 0 40px;background-color:beige ;}
-        /* .top img{float: left;} */
+        .top img{float: left;}
             .util{float: right;}
             .util li{float: left;width:150px;font-size: 20px;font-weight: bold;line-height: 50px;}
 
