--- a/20210817_form/form_naver/index.html
+++ b/20210817_form/form_naver/index.html
@@ -21,34 +21,83 @@
         <div id="content">
             <h2 class="blind">네이버회원가입</h2>
             <div class="join">
-                <form action="#" method="GET">
-                    <fieldset>
-                        <legend class="blind">아이디/비밀번호</legend>
-                        
-                        <p class="field">
-                            <label for="user-id" class="blind">아이디</label>
-                            <input type="text"id="user-id" name="userId"
-                                placeholder="아이디입력" class="inp-field"  >
-                            <span class="icon email">@naver.com</span>
-                        </p>
-                        <p class="field">
-                            <label for="user-pass" class="blind">비밀번호</label>
-                            <input type="password" id="user-pass" name="passWord" 
-                                placeholder="비밀번호입력" class="inp-field" >
-                            <span class="icon pass">비밀번호</span>    
-                        </p>
-                        <p class="field">
-                            <label for="user-pass2" class="blind">비밀번호확인</label>
-                            <input type="password" id="user-pass2" name="passWord2" 
-                                placeholder="비밀번호확인" class="inp-field" >
-                            <span class="icon pass2">비밀번호확인</span>    
-                        </p>
+     <form action="#" method="GET">
+       <fieldset>
+        <legend class="blind">아이디/비밀번호</legend>
+        
+        <p class="field">
+            <label for="user-id" class="blind">아이디</label>
+            <input type="text"id="user-id" name="userId"
+                placeholder="아이디입력" class="inp-field"  >
+            <span class="icon email">@naver.com</span>
+        </p>
+        <p class="field">
+            <label for="user-pass" class="blind">비밀번호</label>
+            <input type="password" id="user-pass" name="passWord" 
+                placeholder="비밀번호입력" class="inp-field" >
+            <span class="icon pass">비밀번호</span>    
+        </p>
+        <p class="field none">
+            <label for="user-pass2" class="blind">비밀번호확인</label>
+            <input type="password" id="user-pass2" name="passWord2" 
+                placeholder="비밀번호확인" class="inp-field" >
+            <span class="icon pass2">비밀번호확인</span>    
+        </p>
 
 
-                    </fieldset>
+    </fieldset>
 
-                </form>
-        </div>
+
+    <fieldset>
+        <legend class="blind">개인정보</legend>
+        <p class="field">
+            <label for="user-name" class="blind">이름</label>
+            <input type="text" id="user-name" placeholder="이름" class="inp-field w458">
+        </p>
+        <p class="field radio">
+            <input type="radio" id="male" name="user-s" value="남성" checked>
+            <input type="radio" id="female" name="user-s" value="여성">
+
+            <label for="male" class="btn-label male">남자</label>
+            <label for="female" class="btn-label female">여자</label>
+        </p>
+
+        <!-- p.field.birth -->
+        <p class="field birth clearfix">
+            <label for="user-birth">생일</label>
+            <input type="text" id="user-birth" name="useryear" 
+            placeholder="년도(4자)"
+            class="inp-field w130 ">
+            <span class="field-wall">|  </span>
+            <select name="month">
+                    <!-- option[value="$"]*12>{$월} -->
+                <option value="1">1월</option>
+                <option value="2">2월</option>
+                <option value="3">3월</option>
+                <option value="4">4월</option>
+                <option value="5">5월</option>
+                <option value="6">6월</option>
+                <option value="7">7월</option>
+                <option value="8">8월</option>
+                <option value="9">9월</option>
+                <option value="10">10월</option>
+                <option value="11">11월</option>
+                <option value="12">12월</option>
+                </select>
+            <span class="field-wall">|</span>
+            <!-- 세로 바 표시: 쉬+ won(뒤로가기 왼쪽) -->
+            <input type="text"  name="day" placeholder="일"
+            class="inp-field w145"  >
+        </p>
+
+        <p class="field">
+            <label for="user-mail" class="blind">본인확인메일</label>
+            <input type="text" id="user-mail" 
+            placeholder="본인확인 이메일" class="inp-field w458">
+        </p>
+    </fieldset> 
+</form>
+            </div>
         </div>
     </div>
 </body>
