--- a/20210823_table/form.html
+++ b/20210823_table/form.html
@@ -29,7 +29,7 @@
     .table_cell .bg_gray{background: #ddd;font-weight:bold;}
 
     .point{color:red;}
-    
+/*     
     .table_cell h3{font-size:22px;text-align: center;}
     .table_cell .detail{text-align:left;padding:40px;text-indent:-15px;padding-left:40px;font-size:16px;line-height:25px;padding-bottom:20px;}
     .table_cell .agree{width: 100px;margin-left: auto;}
@@ -37,7 +37,7 @@
     .lastView{width: 100%;font-size:25px;margin:auto;text-indent: initial;}
     .lastView .left{float: left;width:350px;position: relative;}
     .lastView .right{float: right;width:350px;position: relative;margin-right:10px;padding-bottom:20px;}
-    .lastView .lastRight{display: block;position: absolute;right:0;top: 0;border-bottom: 1px solid #000;padding-bottom:10px;}
+    .lastView .lastRight{display: block;position: absolute;right:0;top: 0;border-bottom: 1px solid #000;padding-bottom:10px;} */
 
     /*common*/
     .bb_none{border-bottom: 0 none !important;}
