--- a/20210824_ani/index_ani.html
+++ b/20210824_ani/index_ani.html
@@ -63,6 +63,7 @@
             @keyframes line4{
                 to{height: 500px;}
                           }
+           /* animation name을 keyframes로 연결해서 애니메이션 작동 설정  */
            
            .box:hover .line1{animation-name: line1;}
            .box:hover .line2{animation-name: line2;}
