--- a/20210826_wow/index.html
+++ b/20210826_wow/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>animation_WOW</title>
     <!-- <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
-    https://animate.style/에서 링크와 바디h1그대로 카피해서 적용해봄-->
+    https://animate.style/에서 링크카피 헤드에 링크걸고 바디에 h1그대로 카피해서 테스트-->
  
   <link rel="stylesheet" href="../css/reset.css">
   
@@ -46,7 +46,8 @@
     <!-- <h1 class="animated bounceInLeft">An animated element</h1>  -->
     
     <h1 class="wow fadeInDown"></h1> 
-    <div style="height:2000px "></div> <!-- 세로선 스크롤생성 -->
+    <!-- <div style="height:2000px "></div> 세로선 스크롤생성 -->
+    <div style="height:100px "></div> 
     <div class="container test1 mb2">
         <ul class="clearfix" >
             <li class="wow bounceInLeft" data-wow-delay="0" data-wow-offset="0">test </li>
@@ -61,7 +62,8 @@
         <p class="wow fadeInLeft" data-wow-delay="1s" >Lorem ipsum dolor sit amet
                                        consectetur adipisicing elit. Eaque, hic.</p>
     </div>
-    <div style="height:500px "></div>
+    <!-- <div style="height:500px "></div> 세로스크롤 스크롤 작동과 애니메이션 효과 시작 관련 -->
+    <div style="height:100px "></div>
 
     <div class="container test1 ">
         <ul class="clearfix" >
