--- a/20210817_form/index.html
+++ b/20210817_form/index.html
@@ -7,6 +7,10 @@
     <title>form문서</title>
     <link rel="stylesheet" href="../css/reset.css">
 
+    <style>
+        form{margin: 30px;}
+        /* form{margin-top: 20px;margin-left: 20px;margin-right: 20px;} */
+    </style>
 </head>
 <body>
     <form action="welcome.php" method="GET">
@@ -39,7 +43,7 @@
                          <!-- radio 남자든 여자든 둘중 하나만 선택할 때 -->
             <br>
             <label for="text">추가입력</label>  <br>           
-            <textarea name="test" id="text" cols="30" rows="10"></textarea>
+            <textarea name="test" id="text" cols="30" rows="5"></textarea>
             <br>
             <label for="sel">선택하시오</label>
             <select name="fruit" id="sel">
@@ -64,9 +68,8 @@
 <input type="text">입력요소
         type text password checkbox radio submit 
              reset image file button hidden
-        value
-        name
-        id
+      id name value
+        
 <label for=""></label>입력요소제목
 <textarea name="" id="" cols="30" rows="10"></textarea>여러줄글상자
 <select name="" id=""></select>선택상자
