--- a/20210824_ani/index_anipos.html
+++ b/20210824_ani/index_anipos.html
@@ -55,6 +55,9 @@
         }
         input[type="text"]:focus{outline: none;}
                 /* .bal{position: absolute;top: 30%;right: 20%;} */
+
+
+
         div.wrap form{position: relative;}
         .bal{position: absolute;top: -200px;right: -100px;
                             /* 여기까지 풍선이 앞으로 나옴 검색창 가려짐
@@ -65,8 +68,8 @@
         animation-duration: 2s;
         /* animation-fill-mode: forwards; */
         animation-iteration-count: infinite;
-        animation-direction: alternate;
-         }
+        animation-direction:alternate}
+          
         
     @keyframes bal{
             /* from{top: -200px;} */
