--- a/20210901_fontawesome/index.html
+++ b/20210901_fontawesome/index.html
@@ -35,7 +35,8 @@
 
    
         <i class="fas fa-camera "></i>   
-        <i class="fas fa-hotel "></i>   
+        <i class="fas fa-hotel "></i>  
+        <i class="fas fa-home"></i> 
         <i class="fas fa-plane "></i>    
         <i class="fas fa-smile "></i>   
         <i class="fas fa-heart "></i>   
