--- a/20210901_toggleMenu/toggleMenu01.html
+++ b/20210901_toggleMenu/toggleMenu01.html
@@ -41,7 +41,7 @@
                     transform: translate(-50%,-50%) rotate(45deg)} */
                 
         /* css 스타일 위치가 기본적으로 적용됨 
-        *  위치보다 우선순위로 적용되는 점수( 코드10점 태그1점) */
+        *  위치보다 우선순위로 적용 점수( 코드10점 태그1점) */
 
          .toggleMenu.active .bar1{
             transform:translate(-50%,-50%) rotate(45deg);top:50%
@@ -90,11 +90,12 @@
 
     <div class="topMenu">
         <nav class="topNav">
-            <!-- a[here="#"]*3>lorem1 -->
-            <a href="" here="#">Lorem.</a>
-            <a href="" here="#">Illo?</a>
-            <a href="" here="#">Ullam?</a>
-            <a href="" here="#">Ullam?</a>
+            <!-- a[href="#"]*4>lorem1 -->
+            <a href="#">Lorem.</a>
+            <a href="#">Quaerat?</a>
+            <a href="#">Fuga.</a>
+            <a href="#">Fuga.</a>
+         
         </nav>
     </div>
 </body>
