--- a/20210901_toggleMenu/media_toggle.html
+++ b/20210901_toggleMenu/media_toggle.html
@@ -11,7 +11,7 @@
     <script src="../js/jquery-3.1.1.min.js"></script>
 
 <style>
-    html,body{height: 100%;}
+    html,body{height: 100%;}  /* poa por로 위치값 줄때 height값필요  fll flr은 width값 설정해 주어야함 */
     .menuWrap{background: #333;}
     .menuWrap a{color: white;}
     .menuWrap h1{width: 100px;text-align: center; line-height: 50px;padding-left: 16px;}
