--- a/20210901_toggleMenu/test.html
+++ b/20210901_toggleMenu/test.html
@@ -30,7 +30,8 @@
 
  <style>
     html,body{height: 100%;}
-    /* 기능무엇? */
+    /* poa por로 위치값 줄때 height값필요 
+    fll flr은 width값 설정해 주어야함 */
     .top{ background: #444; position: relative; width: 100%;  }
     .top a{color:white}
         h1{float: left; padding: 10PX 20px; line-height: 40px; }
@@ -63,7 +64,7 @@
     position: fixed;left: -100%;
     /* top: 0; */
        display: flex;justify-content: center;align-items: center;}
-.nav>a{float: none;text-align: center;background: purple;margin: 5px;}
+.nav>a{float: none;text-align: center;background: rgb(60, 38, 201);margin: 5px;}
 
 
    }
