--- a/20210901_toggleMenu/media_toggle.html
+++ b/20210901_toggleMenu/media_toggle.html
@@ -76,8 +76,8 @@
         // 화면리사이즈, 스크롤, 버튼클릭, 마우스포인터 포커스등은 이벤트로 function(){} 펑션리스너가 필요 
         $(window).resize(function(){
                            // alert("변경마시오")
-        $(".myTopMenu").attr("style","")
-        $(".toggleMenu").removeClass("active")
+        $(".myTopMenu").attr("style","");
+        $(".toggleMenu").removeClass("active");
     });
     });
 </script>
