--- a/20210908_css_menu/submenuvisualtest.html
+++ b/20210908_css_menu/submenuvisualtest.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>submenu</title>
+    <title>submenuvisualtest</title>
 <link rel="stylesheet" href="../css/reset.css">
 <link rel="stylesheet" href="../css/jquery.bxslider.css">
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+
 <script src="../js/jquery-3.1.1.min.js"></script>
 <script src="../js/jquery.bxslider.js"></script>
 
@@ -16,7 +19,7 @@
     });
 </script>
 <style>
-.slider img{w100}
+.slider img{width: 100%;}
 .submenu{display: none; }
 .gnb{width: 1000px; margin: 0 auto; height: 40px;
     position: fixed;
@@ -34,6 +37,8 @@
 .submenu li:hover{background: orange;}
 .visual{background: pink;height: 300px;}
 
+.test {height: 300px;}
+.test i { font-size: 70px; }
 
 </style>
 </head>
@@ -76,8 +81,29 @@
     </nav>
     <ul class="slider">
         <li><img src="../images/fo1.jpg" alt=""></li>
-        <li><img src="../images/fo (2).jpg" alt=""></li>
+        <li><img src="../images/fo4.webp" alt=""></li>
+        <li><img src="../images/fo5.webp" alt=""></li>
         <li><img src="../images/fo (3).jpg  " alt=""></li>
     </ul>
+
+
+<div class="test">
+
+
+
+    <i class="fas fa-balance-scale"></i>
+    <i class="fas fa-globe"></i>
+    <i class="fas fa-hands-helping"></i>
+    <i class="fas fa-leaf"></i>
+    <i class="fas fa-seedling"></i>
+    <i class="fas fa-tree"></i>
+    <i class="fas fa-tree"></i>
+    
+    <i class="fas fa-microscope"></i>
+    <i class="far fa-lightbulb"></i>
+    <i class="fas fa-satellite"></i>
+
+</div>   
+
 </body>
 </html>
