--- a/01javascript/20211004_jquery/modaltest.html
+++ b/01javascript/20211004_jquery/modaltest.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>104 modal    </title>
+    <title>104 modal  </title>
     <link rel="stylesheet" href="../css/reset.css">
     <script src="../js/jquery-3.1.1.min.js"></script>
     <style>
         .glaylayer{position: fixed;width: 100%;height: 100%;
             background: #000 ;top: 0;left: 0;opacity: 0.3;
-        display: none;}
-        .overlayer{position: fixed;_width: 300px;_height: 300px;background: #fff;
+        display: none;
+    }
+        .overlayer{position: fixed;width: 300px;height: 300px;background: #fff;
         left: 50%;top: 50%;transform: translate(-50%,-50%);
-         display: none;}
+        display: none;
+        }
     </style>
     <script>
         $(document).ready(function(){
@@ -22,14 +24,15 @@
             <div class="glaylayer"></div>
             <div class="overlayer"></div>
             `);
-            $("a.modal").click(function(e){
+            $("a.modal").click(function(e){  //$("선택자").on("click",function(){})
                 e.preventDefault();//a tag href기본이벤트를 막아줌
-                $(".glaylayer").fadeIn();
+                $(".glaylayer").fadeIn();// $(selector).fadeIn(speed,easing,function(){})
 
                 // let ahref = $("a.modal").attr("href");
-                let ahref = $(this).attr("href");
+                let ahref = $(this).attr("href"); //달러디스는 에이모달
                 console.log(ahref)
                 $(".overlayer").fadeIn().html(`<img src="${ahref}">`);
+                // document.qureySelector(".overlayer").innerHTML=`<img src ="${ahref}">`
             });
 
             $(".glaylayer,.overlayer").click(function(){
@@ -44,6 +47,9 @@
     </a>
     <a href="../images/img1.jpg" class="modal">
         <img src="../images/img1.jpg" alt="">
+      </a>
+      <a href="../images/img2.jpg" class="modal">
+        <img src="../images/img2.jpg" alt="">
       </a>
 </body>
 </html>
