--- a/01javascript/20210930_window/open.html
+++ b/01javascript/20210930_window/open.html
@@ -6,22 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>930 window open</title>
 </head>
-<!-- <body>
+<body>
    <button onclick="winOpen('http://www.naver.com')">네이버창열기</button> 
    <button onclick="winOpen('http://www.daum.net')">다음창열기</button> 
-   <button onclick="winOpen('popup.html')">팝업창열기</button> 
+   <button onclick="winOpen('popup.html')">창열기</button> 
    <script>
        function winOpen(url){
            window.open(url,"test","width=500, height=500")
        }
    </script>
-</body> -->
-
-<body>
-    <img src="../images/testimg.jpg " alt=""><br>
-    <button onclick="han()">닫기</button>
-    <script>
-        function han(){}
-    </script>
 </body>
+
+
+
 </html>
