--- a/20210824_test/test_toggle_table.html
+++ b/20210824_test/test_toggle_table.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>toggle circle cross</title>
 <style>
+body{background: #001D45;}
  .toggle{
-    width: 35px;height: 35px;border: 1px solid #aaa;
+    width: 35px;height: 35px;border: 2px solid white;
+    /* border-radius: 5px; */
         position: relative;cursor: pointer;
         float: right; }
 .toggle div{
-    width: 24px;height: 3px;background: #aaa;
+    width: 24px;height: 3px;background: white;
     border-radius: 1.5px;
     position: absolute;left: 50%;
     margin-left: -12px; }
