--- a/fullpage/fullpage_origin.html
+++ b/fullpage/fullpage_origin.html
@@ -56,10 +56,10 @@
         <h1>logo</h1>
         <!-- ul>li*4>a[href="#"]>{menu$} -->
         <ul class="clearfix" id="topMenu">
-            <li data-menuanchor="m1st"><a href="#m1st">menu1</a></li>
-            <li data-menuanchor="m2st"><a href="#m2st">menu2</a></li>
-            <li data-menuanchor="m3st"><a href="#m3st">menu3</a></li>
-            <li data-menuanchor="m4st"><a href="#m4st">menu4</a></li>
+            <li data-menuanchor="m1st"><a href="#m1st">MENU1</a></li>
+            <li data-menuanchor="m2st"><a href="#m2st">MENU2</a></li>
+            <li data-menuanchor="m3st"><a href="#m3st">MENU3</a></li>
+            <li data-menuanchor="m4st"><a href="#m4st">MENU4</a></li>
         </ul>
     </nav>
     <div id="fullpage">
